<resources>
    <string name="admob_id_app">ca-app-pub-9300115819443880~3936988190</string>
    <string name="admob_id_banner_home">ca-app-pub-9300115819443880/3629882345</string>
    <string name="admob_id_banner_day_detail">ca-app-pub-9300115819443880/7377555662</string>
    <string name="admob_id_banner_day_detail_edit">ca-app-pub-9300115819443880/7865459065</string>
    <string name="admob_id_banner_exit">ca-app-pub-9300115819443880/3926214052</string>
    <string name="app_name">Koala</string>
    <string name="tap1_title">Record</string>
    <string name="tap2_title">Daily</string>
    <string name="tap3_title">Report</string>
    <string name="tap4_title">Setting</string>
    <string name="calendar_day_sun">Sun</string>
    <string name="calendar_day_mon">Mon</string>
    <string name="calendar_day_tue">Tue</string>
    <string name="calendar_day_wed">Wed</string>
    <string name="calendar_day_thu">Thu</string>
    <string name="calendar_day_fri">Fri</string>
    <string name="calendar_day_sat">Sat</string>
    <string name="calendar_detail_drunk_level_0">I never drank at all!</string>
    <string name="calendar_detail_drunk_level_1">I drank so lightly.</string>
    <string name="calendar_detail_drunk_level_2">I got pretty tipsy.</string>
    <string name="calendar_detail_drunk_level_3">I was so drunk.</string>
    <string name="calendar_detail_drunk_level_max">I had a blackout.</string>
    <string name="calendar_detail_drunk_level_0_short"></string>
    <string name="calendar_detail_drunk_level_1_short">lightly</string>
    <string name="calendar_detail_drunk_level_2_short">tipsy</string>
    <string name="calendar_detail_drunk_level_3_short">so drunk</string>
    <string name="calendar_detail_drunk_level_max_short">blackout</string>
    <string name="calendar_detail_drunk_level_title">How much did you drink?</string>
    <string name="calendar_detail_friends_title">Company</string>
    <string name="calendar_detail_drink_title">Drinks</string>
    <string name="calendar_detail_foods_title">Food</string>
    <string name="calendar_detail_expense_title">Expense</string>
    <string name="calendar_detail_memo_title">Memo</string>
    <string name="calendar_detail_hint_click_to_save">Click to input</string>
    <string name="calendar_expense_currency">$ %s</string>
    <string name="calendar_day_date">%s day(s)</string>
    <string name="tap_today_drink_state">My recent alcohol life</string>
    <string name="drink_state_nowadays_0">Safe</string>
    <string name="drink_state_nowadays_1">Not bad</string>
    <string name="drink_state_nowadays_2">Not good</string>
    <string name="drink_state_nowadays_3">Dangerous</string>
    <string name="drink_state_nowadays_4">Never drink</string>
    <string name="tap_today_drink_times">The number of drunken days for last 7 days : %s</string>
    <string name="tap_today_drink_level">The average amount of alcohol for last 7 days : %s</string>
    <string name="tap_today_no_drink_info_1">Not drinking for</string>
    <string name="tap_today_no_drink_info_2" formatted="true">%s day(s)!</string>
    <string name="tap_today_no_drink_info_3" formatted="true">Since %s</string>
    <string name="calendar_today">Today</string>
    <string name="default_friend_list">Alone</string>
    <string name="default_food_list">Only alcohol</string>
    <string name="acitivity_calendar_detail_list_edit_no_date">No result.</string>
    <string name="acitivity_calendar_detail_list_edit_info_add_1">Please tab&#160;</string>
    <string name="acitivity_calendar_detail_list_edit_info_add_2">[+]</string>
    <string name="acitivity_calendar_detail_list_edit_info_add_3">&#160;on the top right and add.</string>
    <string name="acitivity_calendar_detail_list_edit_new_info_amount">(선택입력) 여기를 눌러 마신 양을 기록</string>
    <string name="activity_splash_sub_title">Control alcohol.\nWe can do it.</string>
    <string name="dialog_add_info_enter">Please input here</string>
    <string name="dialog_exit_info_exit">Do you really want to exit?</string>
    <string name="dialog_interview_whythisapp_info_1">코알라가 갑자기 궁금하대요.</string>
    <string name="dialog_interview_whythisapp_info_2">이 앱을 사용하시는 목표</string>
    <string name="dialog_interview_whythisapp_info_3">가 무엇인가요?</string>
    <string name="dialog_interview_whythisapp_info_4">코알라가 알려줘서 고맙대.</string>
    <string name="dialog_interview_whythisapp_info_5">그리고 그 목표를 이루길 응원한대요!</string>
    <string name="dialog_login_info">앗!\n이 기능은 로그인이 필요해요.</string>
    <string name="fragment_tab_settings_info_user_guest">비회원</string>
    <string name="fragment_tab_settings_info_user_login">회원가입/로그인하기</string>
    <string name="fragment_tab_settings_info_team_1">Let’s&#160;</string>
    <string name="fragment_tab_settings_info_team_2">record and check</string>
    <string name="fragment_tab_settings_info_team_3">&#160;ourselves.</string>
    <string name="fragment_tab_settings_info_team_4">This is the first step.</string>
    <string name="fragment_tab_settings_info_team_5">- Koala team for your challenge</string>
    <string name="fragment_tab_settings_info_calendar_design">Calendar Design</string>
    <string name="fragment_tab_settings_info_kakao">1:1 Chat with Koala team</string>
    <string name="fragment_tab_settings_info_play_store">Give reviews for Koala</string>
    <string name="fragment_tab_settings_info_share">Share Koala</string>
    <string name="fragment_tab_settings_info_version">Version</string>
    <string name="fragment_tab_settings_info_push_title_1">Push alarm set</string>
    <string name="fragment_tab_settings_info_push_title_2">Push alarm time set</string>
    <string name="fragment_tab_settings_info_push_1">Push messages are delivered for recording daily.</string>
    <string name="fragment_tab_settings_info_push_2">Set the time to receive push messages daily.</string>
    <string name="settings_calendar_desgin_defaults_title">술 마신 날을 강조 표시</string>
    <string name="settings_calendar_desgin_defaults_subtitle">붉은 색으로 따끔한 경고의 느낌을 줍니다.</string>
    <string name="settings_calendar_desgin_stamp_1_title">술 없는 날을 강조 표시</string>
    <string name="settings_calendar_desgin_stamp_1_subtitle">귀여운 코알라가 잘했다고 칭찬해 줍니다.</string>
    <string name="activity_account_myaccount">내 계정</string>
    <string name="activity_account_gender">성별</string>
    <string name="activity_account_birthday">출생년도</string>
    <string name="activity_account_logout">로그아웃</string>
    <string name="activity_account_info">계정 정보 수정, 삭제 문의는\n<font fgcolor='#2b8a32'><u>개발자에게 실시간 문의하기</u></font>를 이용해 주세요.</string>
    <string name="fragment_tab_statistics_title_count_drink_day">Total alcohol days</string>
    <string name="fragment_tab_statistics_title_count_longest_quit">Alcohol-free period for</string>
    <string name="fragment_tab_statistics_title_count_longest_drink">Alcohol period for</string>
    <string name="fragment_tab_statistics_title_total_expense">Total expense</string>
    <string name="fragment_tab_statistics_info_count_drink_day">I’d say.. you drank once in %s day(s).</string>
    <string name="fragment_tab_statistics_info_count_longest_quit">Alcohol-free %s in a row.&#160;</string>
    <string name="fragment_tab_statistics_info_count_longest_quit_2">The best record is for %s day(s). </string>
    <string name="fragment_tab_statistics_info_count_longest_drink"> Alcohol %s in a row.&#160;</string>
    <string name="fragment_tab_statistics_info_count_longest_drink_2">The best record is for %s day(s).</string>
    <string name="fragment_tab_statistics_info_total_expense">I’d say.. you spent %s everyday. </string>
    <string name="fragment_tab_statistics_notenough_data">Not enough data</string>
    <string name="fragment_tab_statistics_notenough_info">Required for 7 days data and 2 continuous days data at least.</string>
    <string name="fragment_tab_statistics_no_drinkday">Required for 1 day data at least.</string>
    <string name="fragment_tab_statistics_no_expense">No expense data.</string>
    <string name="fragment_tab_statistics_title_frequency_drunk_level">My drunk level</string>
    <string name="fragment_tab_statistics_title_frequency_drink">What I drank the most</string>
    <string name="fragment_tab_statistics_title_frequency_food">What I ate the most</string>
    <string name="fragment_tab_statistics_title_frequency_friend">Whom I was with the most</string>
    <string name="fragment_tab_today_info_not_enough_data_1">No data</string>
    <string name="fragment_tab_today_info_not_enough_data_2">Not all recent 7 days are recorded.</string>
    <string name="fragment_tab_today_info_not_enough_data_3">Please finish recording at Monthly tab.</string>
    <string name="activity_join_info_1">요것들만 입력해 주시면 가입 끝!</string>
    <string name="activity_join_info_2">성별</string>
    <string name="activity_join_male">남</string>
    <string name="activity_join_female">여</string>
    <string name="activity_join_birth_placeholder">(예) 1992</string>
    <string name="activity_join_info_3">출생년도</string>
    <string name="activity_join_info_terms_1">계속 진행 시, 코알라&#160;</string>
    <string name="activity_join_info_terms_2"><u>이용 약관</u></string>
    <string name="activity_join_info_terms_3">&#160;및&#160;</string>
    <string name="activity_join_info_terms_4"><u>개인정보 처리방침</u></string>
    <string name="activity_join_info_terms_5">&#160;내용을&#160;</string>
    <string name="activity_join_info_terms_6">확인하고 동의하는 것으로 간주합니다.</string>
    <string name="warning_cannot_edit_after_day">You cannot record days after today.</string>
    <string name="warning_server_updating">Server is being updated now.</string>
    <string name="warning_push_agree" formatted="true">Push alarm is set : %2$s at %1$s</string>
    <string name="warning_push_time" formatted="true">%1$s is set for the time.</string>
    <string name="warning_duplicate_name">Already existing name.</string>
    <string name="prefix_time_AM">A.M.</string>
    <string name="prefix_time_PM">P.M.</string>
    <string name="prefix_agree">agreed</string>
    <string name="prefix_disagree">disagreed</string>
    <string name="warning_invalid_birthday_year">입력한 연도가 올바른지 확인해 주세요</string>
    <string name="warning_require_data">모든 정보를 입력해주세요</string>
    <string name="title_login">로그인</string>
    <string name="title_terms_service">이용 약관</string>
    <string name="title_terms_privacy">개인정보 처리방침</string>
    <string name="title_account">내 계정 설정</string>
    <string name="btn_next_short">Next</string>
    <string name="btn_save_long">Save</string>
    <string name="btn_add_short">OK</string>
    <string name="btn_add_long">Add</string>
    <string name="btn_cancel_short">Cancel</string>
    <string name="btn_delete_short">OK</string>
    <string name="btn_delete_long">Delete</string>
    <string name="btn_exit_short">OK</string>
    <string name="btn_update_short">OK</string>
    <string name="btn_update_long">Rename</string>
    <string name="btn_confirm_short">OK</string>
    <string name="btn_dontbother">알 거 없어!</string>
    <string name="btn_see_total">Details ></string>
    <string name="btn_login_google">Google 계정으로 로그인</string>
    <string name="btn_complete_join">동의하고 가입완료!</string>
    <string name="btn_login_in10secs">10초만에 로그인</string>
    <string name="guide_start">I am ready!</string>
    <string name="guide_title_1">Record</string>
    <string name="guide_title_2">Alarm</string>
    <string name="guide_title_3">Check</string>
    <string name="guide_title_4">Control</string>
    <string name="guide_contents_1">How much did you drink?\nWhom did you drink with?\n What did you eat?\nWhat did you drink?</string>
    <string name="guide_contents_2">Daily recording is important.\nReceive alarms on the set time daily.\nExplore memory and record last night.</string>
    <string name="guide_contents_3">How about your recent life?\nHow many did you drink this month?</string>
    <string name="guide_contents_4">Just see how much you drink.\nJust see yourself.\nThis is the first step.</string>
</resources>