<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <RelativeLayout
        android:id="@+id/dialogLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorHalfTransparent">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="374dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:elevation="8dp"
            android:background="@drawable/bg_dialog">

            <!-- Header -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="12dp"
                android:text="@string/dialog_exit_info_exit"
                android:textColor="@color/colorMain"
                android:textStyle="bold"
                android:textSize="16dp"
                android:gravity="center"/>

            <!-- Body -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="center">

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="MEDIUM_RECTANGLE"
                    ads:adUnitId="@string/admob_id_banner_exit"/>

            </LinearLayout>

            <!-- Footer -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_cancel_short"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorDarkGray"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/btnExit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_exit_short"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMain"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
