<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activity"
            type="com.ksdigtalnomad.koala.ui.views.user.LoginActivity" />
    </data>
    <RelativeLayout
        android:id="@+id/bodyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.views.user.LoginActivity"
        android:background="@color/colorPureWhite">

        <!--Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorMain">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:src="@drawable/ic_back"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="14dp"
                android:layout_centerVertical="true"
                android:onClick="@{()->activity.onBackClick()}"/>

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/title_login"
                android:textSize="18dp"
                android:textColor="#fff"
                android:textStyle="bold"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="112dp"
            android:text="@string/app_name"
            android:textSize="55dp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appTitle"
            android:text="@string/activity_splash_sub_title"
            android:textSize="20dp"
            android:textColor="@color/colorDarkGray"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/bg_splash"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="126dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btn_google_round_red"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="@{()->activity.onGoogleLoginClick()}">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_google"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_google"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorRed"/>
        </LinearLayout>

        <!-- Banner Ads -->
        <LinearLayout
            android:id="@+id/layout_ads"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:background="@color/colorPureBlack">
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_id_banner_day_detail_edit"/>
        </LinearLayout>

    </RelativeLayout>
</layout>
